# Axiome

./: .gitignore  README.md  Test Import.xlsx  docker-compose.prod.yml
.github/workflows/: build.yml
API/: Dockerfile  api-sidecar.spec  axiome_api.spec  requirements.txt
API/app/: main.py
API/app/api/: deps.py
API/app/api/v1/: api.py
API/app/api/v1/endpoints/: analytics.py  backtesting.py  market_data.py  optimization.py  portfolios.py  users.py
API/app/core/: config.py
API/app/db/: base.py  init_db.py  session.py
API/app/models/: __init__.py  instrument.py  portfolio.py  user.py
API/app/schemas/: __init__.py  portfolio.py  user.py
API/app/services/: analytics.py  backtesting.py  market_data.py  market_data.py.bak  optimization.py
UI/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
UI/src/: App.tsx
UI/src-tauri/: Cargo.toml  tauri.conf.json
UI/src-tauri/icons/: icon.icns
UI/src-tauri/src/: main.rs
UI/src/components/: Sidebar.tsx  TopBar.tsx
UI/src/context/: AuthContext.tsx  PortfolioContext.tsx
UI/src/data/: mockData.ts
UI/src/pages/: About.tsx  Admin.tsx  Analytics.tsx  Backtesting.tsx  Dashboard.tsx  ImportInstruments.tsx  Login.tsx  Optimization.tsx  PortfolioComparison.tsx  Positions.tsx  Profile.tsx  Risk.tsx  StressTest.tsx  Transactions.tsx  UserPicker.tsx
UI/src/services/: api.ts
scripts/: build-sidecar.ps1
