[package]
name = "axiome"
version = "2.0.0"
description = "Axiome — Multi-Asset Analytics Platform"
authors = ["Axiome"]
license = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["shell-sidecar", "shell-open", "process-exit", "process-relaunch", "window-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
